--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,17 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 
+/*
+./gradlew clean build bintrayUpload -PbintrayUser=jeyechoo -PbintrayKey=7b5360461ef7851132f69e9875599942d6f529ff -PdryRun=false
+*/
+
 publish {
     userOrg = 'jeyechoo'
     groupId = 'com.jey_dev'
     artifactId = 'JeYBasedLibrary'
-    publishVersion = '1.0.0'
+    publishVersion = '1.0.1'
     desc = ''
-    website = 'https://github.com/JeongYoungHoon/JeYBasedLibrary'
+    website = "https://github.com/JeongYoungHoon/${artifactId}"
     issueTracker = "${website}/issues"
     repository = "${website}.git"
 }
