--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ publish {
     userOrg = 'jeyechoo'
     groupId = 'com.jey_dev'
     artifactId = 'JeYBasedLibrary'
-    publishVersion = '1.2.1'
+    publishVersion = '1.2.2'
     desc = ''
     website = "https://github.com/JeongYoungHoon/${artifactId}"
     issueTracker = "${website}/issues"
@@ -21,7 +21,7 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
 //        applicationId "com.jey_dev.lib.jeybasedlibrary"
-        minSdkVersion 16
+        minSdkVersion 10
         targetSdkVersion 25
         versionCode 1
         versionName "1.0.0"
@@ -32,6 +32,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions{
+        abortOnError false
     }
 }
 
